Fix gap in tabbar.

--- a/xdstools2/src/main/webapp/Xdstools2.css
+++ b/xdstools2/src/main/webapp/Xdstools2.css
@@ -207,6 +207,7 @@ h3 {
 }
 
 .gwt-TabBar {
+  margin-top:6.5px;
   border-bottom: 4px solid #92C1F0;
 }
 
